# wasmtime-poc

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: main.rs  models.rs  utils.rs  workflow_runner.rs  workflow_service.rs
nodes/add_node/: Cargo.toml
nodes/add_node/src/: bindings.rs  lib.rs
nodes/add_node/wit/: add.wit
nodes/http_node/: Cargo.toml
nodes/http_node/src/: bindings.rs  custom_http.rs  lib.rs
nodes/http_node/wit/: world.wit
nodes/print_node/: Cargo.toml
nodes/print_node/src/: bindings.rs  lib.rs
nodes/print_node/wit/: print.wit
nodes/trigger_node/: Cargo.toml
nodes/trigger_node/src/: bindings.rs  lib.rs
nodes/trigger_node/wit/: trigger.wit
nodes/wait_node/: Cargo.toml
nodes/wait_node/src/: bindings.rs  lib.rs
nodes/wait_node/wit/: world.wit
